@@ -5,6 +5,8 @@
 * indent width is modified to 2
 * fswiki2md: enumerate from '0.' to '1.'
 * add bin/statistics
+* bin/columnform, left-justified is as default
+* bin/columnform, preserve indent
 
 == Version 0.1.3 [2016-05-31] released
 * bin/calc can accept commandline argument
